--- a/index.html
+++ b/index.html
@@ -75,18 +75,17 @@ function sound()
 
 
 
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c0">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c1">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c2">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c3">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c4">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c5">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c6">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c7">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c8">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c9">Monoxide</div>
-<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c10">Monoxide</div>
-
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c0">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c1">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c2">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c3">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c4">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c5">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c6">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c7">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c8">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c9">intelxide</div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c10">intelxide</div>
 
 
 <audio  id="monoxide" style="display:none;" src="monoxide.mp3"   loop>
