--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@ function sound()
 <div class="drag-and-drop" style="display:none; width: 200px; height: 200px;" id="tama"><img src="tama.png"></div>
 
 
+
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c0"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c1"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c2"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c3"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c4"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c5"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c6"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c7"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c8"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c9"></div>
+<div class="drag-and-drop" style="top:110;left:110; display:none;" id="c10"></div>
+
+
 <audio  id="monoxide" style="display:none;" src="monoxide.mp3"   loop>
   <code>audio</code>
 </audio>
